# rocket-experiment

./: .editorconfig  .env  .gitignore  Cargo.toml  Justfile  index.html  locutions_proxy.go  main.go  package.json  repository.proto  tsconfig.json  tslint.json
css/: .editorconfig  index.css  index.scss
frontend/: webpack.config.js
frontend/assets/: bg.xcf
frontend/src/: styles.scss
js/: webpack.config.js
js/src/: App.tsx  actions.ts  api.tsx  edition-new.ts  epic-utils.ts  epics.ts  global.d.ts  main.tsx  types.ts
js/src/rpc/: repository_pb.d.ts  repository_pb.js  repository_pb_service.ts
migrations/2017-11-26-134536_create_accounts/: up.sql
migrations/20170720202139_create_edition/: down.sql  up.sql
migrations/20170820170431_create_fragments/: down.sql  up.sql
migrations/20170924123757_add_slug_to_editions/: down.sql  up.sql
misc/: localhost.crt  localhost.key
proto/: repository.pb.go  repository.pb.gw.go  repository.proto  repository.swagger.json
src/: error.rs  files.rs  i18n.rs  lib.rs  main.rs  md_transform.rs  pscodegen.rs  repository.rs  rocket_main.rs
src/api/: editions.rs  error.rs  ethica.rs  ethics.rs  mod.rs
src/db/: schema.rs
src/l10n/: en.fluent  la.fluent
src/models/: account.rs  edition.rs  fields.rs  fragment.rs  mod.rs  validation.rs
src/pages/: ethica.rs  ethics.rs  ethics_tests.rs  fail.rs  index.rs  mod.rs  utils.rs
src/rpc/: mod.rs  repository.rs  repository_grpc.rs
src/rpc_api/: editions.rs  mod.rs  repository.rs  traits.rs
src/schemas/: ethica.rs  ethics.rs  ethics_tests.rs  mod.rs
templates/: base.hbs  base.html.hbs  editions.html.hbs  ethica.html.hbs  index.hbs  index.html  index.html.hbs  top.hbs
templates/editions/: edit.html.hbs  home.html.hbs  new.html.hbs  show.html.hbs
templates/ethica/: top.hbs
templates/ethica/editions/: new.html.hbs  parts.html.hbs
templates/ethics/: fragment.html.hbs  part.html.hbs
templates/partials/: savebutton.html.hbs  textarea.html.hbs  textinput.html.hbs
tests/: e2e.rs  integration.rs
ts/: swagger-ts.config.json  webpack.config.js
ts/src/: App.tsx  CreateEdition.tsx  Editions.tsx  Ethics.tsx  Form.tsx  Fragment.tsx  Home.tsx  TextEdit.tsx  actions.ts  epic-utils.ts  epics.ts  ethics.scss  form.scss  global.d.ts  home.scss  main.tsx  pbutils.ts  reducers.ts  shell.scss  types.ts
ts/src/ethics/: CreateEdition.tsx  Edition.tsx  Editions.tsx  Ethics.tsx  Fragment.tsx  actions.ts  epics.ts  reducers.ts
ts/src/rpc/: repository_pb.d.ts  repository_pb.js  repository_pb_service.ts
ts/swagger/typescript-fetch/: index.mustache
