[package]
name = "locutions"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]

[dependencies]
chrono = { version = "*", features = ["serde"] }
diesel = { version = "*", features = ["chrono", "postgres", "uuid"] }
diesel_codegen = { version = "*", default-features = false, features = ["postgres"] }
dotenv = "*"
error-chain = "*"
futures = "*"
grpcio = "*"
handlebars = "0.29"
inlinable_string = { version = "0.1.9", features = ["serde"] }
lazy_static = "*"
protobuf = "*"
r2d2 = "*"
r2d2-diesel = "*"
regex = "*"
reqwest = "*"
rocket = "*"
rocket_codegen = "*"
rocket_contrib ={ version = "*", features = ["handlebars_templates"] }
rocket_cors = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "*", features = ["v4", "serde"] }
validator = "0.6"
validator_derive = "0.6"

[[bin]]
name = "main"
doc = false
path = "src/main.rs"
